--- a/1_Introduction.ipynb
+++ b/1_Introduction.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8239c2c2-6286-495f-82e2-db23514b0be9",
+   "metadata": {},
+   "source": [
+    "# Chapter 1: Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0198e0f4-32d5-4ca4-9142-229ded352774",
    "metadata": {},
    "source": [
